--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
             test header
         </div>
         <div class="content">
-            test content
+            <div class="greet">
+                <div class="left-greet">
+                    <div id="left title">This website is awesome</div>
+                    <div id="left desc">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</div>
+                    <div id="signup"><button>Sign Up</button></div>
+                </div>
+                <div class="right-greet">
+                    <div id="my image">This is placeholder for an image</div>
+                </div>
+            </div>
         </div>
         <div class="footer">
             test footer
