--- a/index.html
+++ b/index.html
@@ -7,22 +7,29 @@
     </Head>
     <body>
         <div class="header">
-            test header
+            <div class="left-header">
+                Header Logo
+            </div>
+            <ul class="right-link">
+                <li><a href="#">Link one</a></li>
+                <li><a href="#">Link two</a></li>
+                <li><a href="#">Link three</a></li>
+            </ul>
         </div>
         <div class="content">
-            <div class="greet">
-                <div class="left-greet">
-                    <div id="left title">This website is awesome</div>
-                    <div id="left desc">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</div>
-                    <div id="signup"><button>Sign Up</button></div>
+            <div class="hero">
+                <div class="left-hero">
+                    <div class="title">This website is awesome</div>
+                    <div class="desc">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</div>
+                    <div class="signup"><button>Sign Up</button></div>
                 </div>
-                <div class="right-greet">
+                <div class="right-hero">
                     <div id="my image">This is placeholder for an image</div>
                 </div>
             </div>
         </div>
         <div class="footer">
-            test footer
+            Copyright @ Syahmi Khairul 2022
         </div>
     </body>
 </html>
