Add 2nd section for Top Projects Showcase.
First structure the section using html then add alignment and some decoration using CSS

--- a/index.html
+++ b/index.html
@@ -1,35 +1,60 @@
 <!DOCTYPE html>
 <html>
-    <Head>
-        <meta charset="UTF-8">
-        <title>Syah's Landing Page</title>
-        <link rel="stylesheet" href="style.css">
-    </Head>
-    <body>
-        <div class="header">
-            <div class="left-header">
-                Header Logo
+
+<Head>
+    <meta charset="UTF-8">
+    <title>Syah's Landing Page</title>
+    <link rel="stylesheet" href="style.css">
+</Head>
+
+<body>
+    <div class="header">
+        <div class="left-header">
+            Header Logo
+        </div>
+        <ul class="right-link">
+            <li><a href="#">Link one</a></li>
+            <li><a href="#">Link two</a></li>
+            <li><a href="#">Link three</a></li>
+        </ul>
+    </div>
+    <div class="content">
+        <div class="hero">
+            <div class="left-hero">
+                <div class="title">This website is awesome</div>
+                <div class="desc">This website has some subtext that goes here under the main title. It's smaller font
+                    and the color is lower contrast.</div>
+                <div class="signup"><button>Sign Up</button></div>
             </div>
-            <ul class="right-link">
-                <li><a href="#">Link one</a></li>
-                <li><a href="#">Link two</a></li>
-                <li><a href="#">Link three</a></li>
-            </ul>
+            <div class="right-hero">
+                <div id="my image">This is placeholder for an image</div>
+            </div>
         </div>
-        <div class="content">
-            <div class="hero">
-                <div class="left-hero">
-                    <div class="title">This website is awesome</div>
-                    <div class="desc">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</div>
-                    <div class="signup"><button>Sign Up</button></div>
+        <div class="card-view">
+            <div class="card-title">Some Random Information</div>
+            <div class="container">
+                <div class="sub-contain">
+                    <div class="card"></div>
+                    <div class="text">This is some subtext under the illustration, the image wont be affected by the length of the text below it because i dont know how, i type2 and its just happen.</div>
                 </div>
-                <div class="right-hero">
-                    <div id="my image">This is placeholder for an image</div>
+                <div class="sub-contain">
+                    <div class="card"></div>
+                    <div class="text">This is some subtext under the illustration</div>
+                </div>
+                <div class="sub-contain">
+                    <div class="card"></div>
+                    <div class="text">This is some subtext under the illustration</div>
+                </div>
+                <div class="sub-contain">
+                    <div class="card"></div>
+                    <div class="text">This is some subtext under the illustration</div>
                 </div>
             </div>
         </div>
-        <div class="footer">
-            Copyright @ Syahmi Khairul 2022
-        </div>
-    </body>
+    </div>
+    <div class="footer">
+        Copyright @ Syahmi Khairul 2022
+    </div>
+</body>
+
 </html>
