--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
                 </div>
             </div>
         </div>
+        <div class="quote">
+            <div class="q-text">
+                This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it, who knows? All i know is that it look nice.
+            </div>
+            <div class="from">-Syah, Creator Of This Awesome Page</div>
+        </div>
     </div>
     <div class="footer">
         Copyright @ Syahmi Khairul 2022
