Update Quote section with CSS

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
             <div class="container">
                 <div class="sub-contain">
                     <div class="card"></div>
-                    <div class="text">This is some subtext under the illustration, the image wont be affected by the length of the text below it because i dont know how, i type2 and its just happen.</div>
+                    <div class="text">This is some subtext under the illustration, the image wont be affected by the
+                        length of the text below it because i dont know how, i type2 and its just happen.</div>
                 </div>
                 <div class="sub-contain">
                     <div class="card"></div>
@@ -52,10 +53,13 @@
             </div>
         </div>
         <div class="quote">
+
             <div class="q-text">
-                This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it, who knows? All i know is that it look nice.
+                This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or
+                maybe people will actually read it, who knows? All i know is that it look nice.
             </div>
-            <div class="from">-Syah, Creator Of This Awesome Page</div>
+            <div class="from">-Syahmi Khairul, Creator Of This Awesome Page</div>
+
         </div>
     </div>
     <div class="footer">
