Add 4th section, CTA with HTML only

--- a/index.html
+++ b/index.html
@@ -53,13 +53,22 @@
             </div>
         </div>
         <div class="quote">
-
             <div class="q-text">
                 This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or
                 maybe people will actually read it, who knows? All i know is that it look nice.
             </div>
             <div class="from">-Syahmi Khairul, Creator Of This Awesome Page</div>
-
+        </div>
+        <div class="cta">
+            <div class="cta-container">
+                <div class="cta-left">
+                    <div class="cta-title">Call to action! It's time!</div>
+                    <div class="cta-desc">Sign up to our product by clicking that button right over there!</div>
+                </div>
+                <div class="cta-right">
+                    <button href="#">Sign Up</button>
+                </div>
+            </div>
         </div>
     </div>
     <div class="footer">
