--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div class="cta-desc">Sign up to our product by clicking that button right over there!</div>
                 </div>
                 <div class="cta-right">
-                    <button href="#">Sign Up</button>
+                    <button class="button-footer" href="#">Sign Up</button>
                 </div>
             </div>
         </div>
